# rocksdb-grpc

./: .gitignore  CMakeLists.txt
benchmarks/: CMakeLists.txt  mongo-pool.cpp
cmake/: find-dependencies.cmake  general.cmake
include/: utils.h
include/wise/: mongo-adapter.cpp  mongo-adapter.h
include/wise/abc/: errors.h  serializable.h
include/wise/api/: grpc_service.proto
include/wise/buffer/: memory-buffer.cpp  memory-buffer.h
include/wise/protocol/: base.cpp  base.h  grpc_client.cpp  grpc_client.h  grpc_server.cpp  grpc_server.h  packets.h
include/wise/protocol/packets/: handshake.cpp  handshake.h
include/wise/storage/: rocksdb_adapter.cpp  rocksdb_adapter.h
src/: daemon.cpp
tests/: CMakeLists.txt  test_001_json_serialization.cpp  test_002_mongo_adapter.cpp  test_003_memorybuffer.cpp  test_004_grpc_server_test.cpp  test_005_grpc_client_test.cpp
